# University

./: README.md
1.Semester/DML/: README.md
1.Semester/GIT/: Annotation.md
1.Semester/LA1/: README.md
1.Semester/PA1/: Annotation.md  README.md
1.Semester/TZP/: Annotation.md  README.md
1.Semester/ULI/: Annotation.md
1.Semester/UOS/: Annotation.md  README.md
2.Semester/DBS/: Annotation.md  README.md
2.Semester/MA1/: README.md
2.Semester/PA2/: README.md
2.Semester/PA2 (2022)/: .gitignore  README.md
2.Semester/PSI/: README.md
2.Semester/SAP/: README.md
3. Semester/PHP/: README.md
3.Semester/AG1/: README.md
3.Semester/AG1/Homeworks/hw02-Bestsellers/: CMakeLists.txt  README.md  main.cpp
3.Semester/AG1/Homeworks/hw02-Bestsellers/guide/: hw02_for_dummies.md
3.Semester/AG1/Homeworks/hw02-Bestsellers/guide/tests/: BestsellersTester.hpp  MapTester.hpp  SetTester.hpp
3.Semester/AG1/Homeworks/hw02-Bestsellers/src/: Bestsellers.cpp  Bestsellers.hpp  BestsellersTester.hpp  Map.cpp  Map.hpp  MapNode.cpp  MapNode.hpp  MapTester.hpp  Node.cpp  Node.hpp  Set.cpp  Set.hpp  SetTester.hpp
3.Semester/CS1/: README.md
3.Semester/IDO/: README.md
3.Semester/PJV/: README.md
3.Semester/PYT/: README.md
4. Semester/LA2/: README.md
4.Semester/KAB/: README.md
4.Semester/KAB/hw01 - Hash Function/progtest/: .gitignore  CMakeLists.txt  main.cpp
4.Semester/KAB/hw01 - Hash Function/progtest/src/: Bytes.cpp  Bytes.hpp  Hasher.cpp
4.Semester/KAB/hw03/: .gitignore  CMakeLists.txt  solution.cpp
4.Semester/KOT/: README.md  build.gradle.kts  settings.gradle.kts
4.Semester/OSY/: README.md
4.Semester/SP1/: README.md
4.Semester/SWI/: README.md
5. Semester/AAG/: README.md
5. Semester/MA2/: README.md
5.Semester/AAG/: README.md
5.Semester/ML1/: README.md  homework_01.ipynb  results.csv
5.Semester/PST/: README.md
5.Semester/VIZ/: .gitignore  README.md
6. Semester/ML2/: README.md
6. Semester/PA2 (2024)/: README.md
6. Semester/PRS/: README.md
6.Semester/ML2/: README.md
6.Semester/PA2 (2024)/: README.md
6.Semester/PRS/: README.md
6.Semester/ZUM/: README.md
7.Semester/BIG/: README.md
7.Semester/MPI/: README.md
7.Semester/MPL/: README.md
7.Semester/PDD/: README.md
7.Semester/SCR/: README.md
7.Semester/ZNS/: README.md
Summer (2023)/Research Summer/: .gitignore  README.md  environment.yml
(+1008 files in other folders)
